--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0"
   },
@@ -11,5 +13,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andre Pretorius",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module"
 }
