--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   },
   "author": "Andre Pretorius",
   "license": "MIT",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
