--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "description": "A platform that allows educators to store and manage learners' information in one place.\r Set up file structure",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Andre Pretorius",
   "license": "MIT",
