--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,9 +19,9 @@
   "type": "module",
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^20",
+    "@types/node": "20.19.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   }
 }
