--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^19.1.8",
     "chai": "^5.2.0",
     "mocha": "^11.5.0",
+    "prettier": "3.6.2",
     "sinon": "^20.0.0"
   }
 }
