--- a/src/frontend/classmate/package.json
+++ b/src/frontend/classmate/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-tailwind/react": "^2.1.10",
     "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
     "axios": "^1.10.0",
-    "next": "15.3.5",
+    "lucide-react": "^0.544.0",
+    "next": "^15.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
