--- a/src/frontend/classmate/package.json
+++ b/src/frontend/classmate/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "next": "^15.5.3",
     "react": "^19.0.0",
